# pokemon-go-03--

pokemon-go-03-master/: README.md  pyproject.toml  requirements.txt
pokemon-go-03-master/pokemon/: __init__.py  extension.py  models.py  pokemon_types.py  requirements.txt
pokemon-go-03-master/pokemon/core/: routes.py
pokemon-go-03-master/pokemon/core/templates/core/: index.html  pokemon_detail.html
pokemon-go-03-master/pokemon/pokemon/: routes.py
pokemon-go-03-master/pokemon/pokemon/templates/pokemon/: index.html  new_pokemon.html
pokemon-go-03-master/pokemon/templates/: layout.html  navbar.html
pokemon-go-03-master/pokemon/users/: routes.py
pokemon-go-03-master/pokemon/users/templates/users/: change_password.html
